--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/9_intro_outro_screens/start/startscreen_1.png">
     <title>El_Pollo_Loco</title>
     <link rel="stylesheet" href="style.css">
+    <script src="classes/world.class.js"></script>
+    <script src="classes/movable-object.class.js"></script>
+    <script src="classes/character.class.js"></script>
+    <script src="classes/chicken.class.js"></script>
+
+    <script src="js/game.js"></script>
 </head>
-<body>
+<body onload="init()">
     <h1>El Pollo Loco</h1>
-    <canvas width="720px" height="480px">
+    <canvas id="canvas" width="720px" height="480px">
 
     </canvas>
     
