--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="classes/background-object.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
     <script src="classes/level.class.js"></script>
+    <script src="classes/endboss.class.js"></script>
     <script src="levels/level_1.js"></script>
     <script src="js/game.js"></script>
 </head>
