--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/chicken.class.js"></script>
+    <script src="classes/small-chicken.class.js"></script>
     <script src="classes/cloud.class.js"></script>
     <script src="classes/background-object.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
