--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/9_intro_outro_screens/start/startscreen_1.png">
     <title>El_Pollo_Loco</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/fonts.css">
     <script src="classes/world.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
@@ -20,11 +22,15 @@
     <script src="levels/level_1.js"></script>
     <script src="js/game.js"></script>
 </head>
+
 <body onload="init()">
     <h1>El Pollo Loco</h1>
-    <canvas id="canvas" width="720px" height="480px">
+    <div class="position-relative" id="fullScreen">
+        <canvas id="canvas" width="720px" height="480px">
 
-    </canvas>
-    
+        </canvas>
+    </div>
+
 </body>
+
 </html>
