--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>El_Pollo_Loco</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
-    <script src="classes/world.class.js"></script>
+    <script src="classes/drawable-object.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/chicken.class.js"></script>
