--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
     <script src="classes/drawable-object.class.js"></script>
-    <script src="classes/status-bar.class.js"></script>
+    <script src="classes/statusBar-health.class.js"></script>
+    <script src="classes/statusBar-coin.class.js"></script>
+    <script src="classes/statusBar-bottle.class.js"></script>
+    <script src="classes/statusBar-endBoss-health.class.js"></script>
     <script src="classes/world.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
