--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="classes/cloud.class.js"></script>
     <script src="classes/background-object.class.js"></script>
     <script src="classes/bottle.class.js"></script>
+    <script src="classes/coin.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
     <script src="classes/level.class.js"></script>
     <script src="classes/endboss.class.js"></script>
