--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <title>El_Pollo_Loco</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
+    <script src="classes/world.class.js"></script>
+    <script src="classes/keyboard.class.js"></script>
+    <script src="js/game.js"></script>
+    <script src="classes/level.class.js"></script>
     <script src="classes/drawable-object.class.js"></script>
+    <script src="classes/movable-object.class.js"></script>
+    <script src="classes/statusBar-object.class.js"></script>
     <script src="classes/statusBar-health.class.js"></script>
     <script src="classes/statusBar-coin.class.js"></script>
-    <script src="classes/statusBar-bottle.class.js"></script>
-    <script src="classes/statusBar-endBoss-health.class.js"></script>
-    <script src="classes/world.class.js"></script>
-    <script src="classes/movable-object.class.js"></script>
+    <!-- <script src="classes/statusBar-bottle.class.js"></script>
+    <script src="classes/statusBar-endBoss-health.class.js"></script> -->
     <script src="classes/character.class.js"></script>
     <script src="classes/chicken.class.js"></script>
     <script src="classes/small-chicken.class.js"></script>
@@ -23,11 +27,10 @@
     <script src="classes/background-object.class.js"></script>
     <script src="classes/bottle.class.js"></script>
     <script src="classes/coin.class.js"></script>
-    <script src="classes/keyboard.class.js"></script>
-    <script src="classes/level.class.js"></script>
+
     <script src="classes/endboss.class.js"></script>
     <script src="levels/level_1.js"></script>
-    <script src="js/game.js"></script>
+
 </head>
 
 <body onload="init()">
