--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <script src="classes/statusBar-object.class.js"></script>
     <script src="classes/statusBar-health.class.js"></script>
     <script src="classes/statusBar-coin.class.js"></script>
-    <!-- <script src="classes/statusBar-bottle.class.js"></script>
-    <script src="classes/statusBar-endBoss-health.class.js"></script> -->
+    <script src="classes/statusBar-bottle.class.js"></script>
+    <script src="classes/statusBar-endBoss-health.class.js"></script> 
     <script src="classes/character.class.js"></script>
     <script src="classes/chicken.class.js"></script>
     <script src="classes/small-chicken.class.js"></script>
