--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 <body onload="init()">
     <h1>El Pollo Loco</h1>
     <div class="position-relative" id="fullScreen">
-        <canvas id="canvas" width="720px" height="480px">
-
-        </canvas>
+        <canvas id="canvas" width="720px" height="480px"></canvas>
+        <img onclick="" class="soundOff" src="icons/soundoff.png">
+        <img onclick="" class="soundOn d-none" src="icons/soundon.png">
+        <img onclick="" class="fullScreen" src="icons/fullscreen.png">
+        <img onclick="" class="closefullScreen d-none" src="icons/closfullscrenn.png">
     </div>
 
 </body>
