--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="positionRight">
             <div class="border">
-                <img src="icons/">
+                <img class="imgJump" src="icons/jump.png">
             </div>
             <div class="border">
                 <img class="imgBottle" src="icons/bottle.svg">
