--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <title>El_Pollo_Loco</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
-    <script src="classes/world.class.js"></script>
-    <script src="classes/keyboard.class.js"></script>
-    <script src="classes/level.class.js"></script>
-    <script src="classes/drawable-object.class.js"></script>
-    <script src="classes/movable-object.class.js"></script>
-    <script src="classes/statusBar-object.class.js"></script>
-    <script src="classes/statusBar-health.class.js"></script>
-    <script src="classes/statusBar-coin.class.js"></script>
-    <script src="classes/statusBar-bottle.class.js"></script>
-    <script src="classes/statusBar-endBoss-icon.class.js"></script>
-    <script src="classes/statusBar-endboss-health.class.js"></script>
-    <script src="classes/character.class.js"></script>
-    <script src="classes/chicken.class.js"></script>
-    <script src="classes/small-chicken.class.js"></script>
-    <script src="classes/cloud.class.js"></script>
-    <script src="classes/background-object.class.js"></script>
-    <script src="classes/bottle.class.js"></script>
-    <script src="classes/coin.class.js"></script>
+    <script src="models/world.class.js"></script>
+    <script src="models/keyboard.class.js"></script>
+    <script src="models/level.class.js"></script>
+    <script src="models/drawable-object.class.js"></script>
+    <script src="models/movable-object.class.js"></script>
+    <script src="models/statusBar-object.class.js"></script>
+    <script src="models/statusBar-health.class.js"></script>
+    <script src="models/statusBar-coin.class.js"></script>
+    <script src="models/statusBar-bottle.class.js"></script>
+    <script src="models/statusBar-endBoss-icon.class.js"></script>
+    <script src="models/statusBar-endboss-health.class.js"></script>
+    <script src="models/character.class.js"></script>
+    <script src="models/chicken.class.js"></script>
+    <script src="models/small-chicken.class.js"></script>
+    <script src="models/cloud.class.js"></script>
+    <script src="models/background-object.class.js"></script>
+    <script src="models/bottle.class.js"></script>
+    <script src="models/coin.class.js"></script>
 
-    <script src="classes/endboss.class.js"></script>
+    <script src="models/endboss.class.js"></script>
     <script src="levels/level_1.js"></script>
     <script src="js/game.js"></script>
 
