--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <script src="models/background-object.class.js"></script>
     <script src="models/bottle.class.js"></script>
     <script src="models/coin.class.js"></script>
-
     <script src="models/endboss.class.js"></script>
+    <script src="models/throwable-object.class.js"></script>
     <script src="levels/level_1.js"></script>
     <script src="js/game.js"></script>
 
