Functions fixed and Responsive changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/media.css">
-    <link rel="shortcut icon" href="icons/sombrero.png">
+    <link rel="shortcut icon" href="icons/favicon.png">
 
     <script src="models/world.class.js"></script>
     <script src="models/keyboard.class.js"></script>
@@ -160,64 +160,46 @@
             <h2>Game Controlls</h2>
 
 
-            <table>
+            <div class="controlDiv">
+                <div class="border">
+                    <img class="keyboardButton" src="icons/back.png">
+                </div>
+                <p class="keyboardIcon">
+                    Pepe Move Left
+                </p>
+            </div>
 
-                <tr>
-                    <td>
-                        <div class="border">
-                            <img class="keyboardButton" src="icons/back.png">
-                        </div>
-                    </td>
-                    <td>
-                        <p class="keyboardIcon">
-                            Pepe Move Left
-                        </p>
-                    </td>
-                </tr>
+            <div class="controlDiv">
+                <div class="border">
+                    <img class="keyboardButton" src="icons/forward.png" style="padding-left: 5px;">
+                </div>
 
+                <p class="keyboardIcon">
+                    Pepe Move Right
+                </p>
+            </div>
 
-                <tr>
-                    <td>
-                        <div class="border">
-                            <img class="keyboardButton" src="icons/forward.png" style="padding-left: 5px;">
-                        </div>
-                    </td>
-                    <td>
-                        <p class="keyboardIcon">
-                            Pepe Move Right
-                        </p>
-                    </td>
-                </tr>
+            <div class="controlDiv">
+                <div class="border" style="font-size: 20px; color: black;">
+                    SPACE
+                </div>
 
+                <p class="keyboardIcon">
+                    Pepe Jump
+                </p>
+            </div>
 
-                <tr>
-                    <td>
-                        <div class="border" style="font-size: 20px; color: black;">
-                            SPACE
-                        </div>
-                    </td>
-                    <td>
-                        <p class="keyboardIcon">
-                            Pepe Jump
-                        </p>
-                    </td>
-                </tr>
+            <div class="controlDiv">
+                <div class="border" style="font-size: 30px; color: black;">
+                    A
+                </div>
+
+                <p class="keyboardIcon">
+                    Pepe Throw Bottle
+                </p>
+            </div>
 
 
-                <tr>
-                    <td>
-                        <div class="border" style="font-size: 30px; color: black;">
-                            A
-                        </div>
-                    </td>
-                    <td>
-                        <p class="keyboardIcon">
-                            Pepe Throw Bottle
-                        </p>
-                    </td>
-                </tr>
-
-            </table>
         </div>
         <!--Steering Menu-->
 
