winSound and responsive buggs fixed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="shortcut icon" href="icons/favicon.png">
 
     <script src="models/world.class.js"></script>
@@ -38,6 +39,7 @@
 
 <body>
     <h1>El Pollo Loco</h1>
+    <p class="mobile-warning d-none">Please trun around your phone!</p>
 
     <div>
 
@@ -93,6 +95,7 @@
             <!--Start Screen-->
             <div class="startScreenContainer">
                 <div class="startbtnsContainer">
+
                     <img src="img/9_intro_outro_screens/start/startscreen_2.png" class="startScreen" id="startScreen">
                     <button class="playBtn" onclick="startGame()" id="btnPlay">
                         <img src="icons/play.png" class="btnPlay">
